Make openhigis work

--- a/apache.conf
+++ b/apache.conf
@@ -8,8 +8,18 @@
         Options Indexes
         Require all granted
     </Directory>
-    <LocationMatch "^/(?!(?:synoptic/))(.*)$">
+    <LocationMatch "^/(?!(?:synoptic/|cgi-bin/))(.*)$">
         ProxyPassMatch "http://localhost:8000"
         ProxyPreserveHost On
     </LocationMatch>
+
+    # Mapserver
+    ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
+    <Directory "/usr/lib/cgi-bin">
+        AllowOverride None
+        Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+        Require all granted
+        Header set Access-Control-Allow-Origin "*"
+        Header set Access-Control-Allow-Methods GET
+    </Directory>
 </VirtualHost>
