Serve media files
This commit adds importing of media files in dbimport and serving them
with apache. Before that, there were no media files.

--- a/apache.conf
+++ b/apache.conf
@@ -8,7 +8,12 @@
         Options Indexes
         Require all granted
     </Directory>
-    <LocationMatch "^/(?!(?:synoptic/|cgi-bin/))(.*)$">
+    Alias /media /var/opt/enhydris/openmeteo/media
+    <Directory /var/opt/enhydris/openmeteo/media>
+        Options Indexes
+        Require all granted
+    </Directory>
+    <LocationMatch "^/(?!(?:synoptic/|cgi-bin/|media/))(.*)$">
         ProxyPassMatch "http://localhost:8000"
         ProxyPreserveHost On
     </LocationMatch>
